<resources>
    <string name="app_name">DelivaryMeal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Поиск</string>
    <string name="search_button">ПОИСК</string>
    <string name="email">info@menu24.ee</string>
    <string name="phone_number">+37255689197</string>
    <string name="geometric_706_black">fonts/geometric_706_black.ttf</string>
    <string name="arimo_regular">fonts/arimo/Arimo_Regular.ttf</string>
    <string name="arimo_bold">fonts/arimo/Arimo_Bold.ttf</string>
    <string name="pizza">Пицца</string>
    <string name="sushi">Суши</string>
    <string name="caucasian">Кавказская еда</string>
    <string name="asian">Азиатская еда</string>
    <string name="european">Европейская еда</string>

    <string name="Estonia">Эстония</string>
    <string name="Finland">Финляндия</string>
    <string name="Latvia">Латвия</string>

    <string name="criteria">Критерии</string>
    <string name="criteria_hight_rating">С высоким рейтингом</string>
    <string name="criteria_new">Новые</string>
    <string name="criteria_free_deliver">С бесплатной доставкой</string>
    <string name="criteria_shares">С акциями</string>

    <string name="kitchen">Кухня</string>
    <string name="kitchen_sushi">Суши</string>
    <string name="kitchen_pizza">Пицца</string>
    <string name="kitchen_european_food">Европейская еда</string>
    <string name="kitchen_asian_food">Азиатская еда</string>
    <string name="kitchen_caucasian_food">Кавказская еда</string>

    <string name="ru">Русский</string>
    <string name="ee">Estonian</string>
    <string name="en">English</string>

    <string name="order">ЗАКАЗАТЬ</string>
    <string name="count">шт</string>

    <string name="min_cost_order">мин. сумма заказа</string>
    <string name="cost_deliver">стоимость доставки</string>
    <string name="time_deliver">среднее время доставки</string>

    <string name="country_talin">Талин</string>
    <string name="country_tartu">Тарту</string>
    <string name="country_viljandi">Вилджанди</string>
    <string name="country_rapla">Рапла</string>
    <string name="menu">МЕНЮ</string>
    <string name="title_activity_payment">МЕНЮ</string>


    <string name="load_data_from_internet">Loading</string>

    <string name="your_data">Ваши данные</string>
    <string name="your_order">Ваш заказ</string>

    <string name="enter_name">Введите имя</string>
    <string name="name">Имя</string>
    <string name="choose_city">Выберите город</string>
    <string name="city">Город</string>
    <string name="address">Улица</string>
    <string name="num_house">Дом</string>
    <string name="num_flat">Квартира/офис</string>
    <string name="your_email">Email</string>
    <string name="your_phone">Телефон</string>
    <string name="country">Страна</string>
    <string name="index">Индекс</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="register">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="enter">ВОЙТИ</string>
    <string name="quit">ВЫЙТИ</string>
    <string name="login">ВХОД</string>
    <string name="registration">РЕГИСТРАЦИЯ</string>


    <string name="total">Всего</string>
    
    <string name="personal_cabinet">Личный кабинет</string>

    <string name="pay">ОПЛАТИТЬ</string>
    <string name="back">НАЗАД</string>
    
    <string name="with_delivery">С ДОСТАВКОЙ</string>
    <string name="without_delivery">САМОВЫВОЗ</string>

    <string name="close">ЗАКРЫТЬ</string>
    <string name="ok">OK</string>
    <string name="composition">состав</string>

    <string name="info">ИНФО</string>
    <string name="reviews">ОТЗЫВЫ</string>

</resources>
