<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingTop="20dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kitchen_pizza"
            android:id="@+id/pizzaClick"
        android:onClick="onClick"
        android:textSize="16sp"
        android:fontFamily="@string/geometric_706_black"
        android:layout_margin="5dp"
        android:clickable="true"
        android:textColor="#000000" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kitchen_sushi"
            android:id="@+id/sushiClick"
        android:onClick="onClick"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:fontFamily="@string/geometric_706_black"
        android:clickable="true"
        android:textColor="#000000" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kitchen_caucasian_food"
            android:id="@+id/caucasianClick"
        android:onClick="onClick"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:fontFamily="@string/geometric_706_black"
        android:clickable="true"
        android:textColor="#000000" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kitchen_asian_food"
            android:id="@+id/asianClick"
        android:onClick="onClick"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:fontFamily="@string/geometric_706_black"
        android:clickable="true"
        android:textColor="#000000" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kitchen_european_food"
            android:id="@+id/europeanClick"
        android:onClick="onClick"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:fontFamily="@string/geometric_706_black"
        android:clickable="true"
        android:textColor="#000000" />
</LinearLayout>