<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="90dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estonia"
            android:id="@+id/estoniaText"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@string/geometric_706_black" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Finland"
            android:id="@+id/finlandText"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@string/geometric_706_black" />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Latvia"
            android:id="@+id/latviaText"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@string/geometric_706_black" />
</LinearLayout>