<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_tartu"
        android:id="@+id/textView2"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:fontFamily="@string/geometric_706_black"
        android:layout_margin="5dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_viljandi"
        android:id="@+id/textView3"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:fontFamily="@string/geometric_706_black"
        android:layout_margin="5dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_rapla"
        android:id="@+id/textView4"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:fontFamily="@string/geometric_706_black"
        android:layout_margin="5dp"
        android:textColor="#000000" />
</LinearLayout>