<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/restaurantFragment"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:clickable="false"
    android:paddingTop="5dp"
    android:background="#f1f1f1"
    android:paddingBottom="10dp"
    android:paddingRight="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:clickable="true"
        android:background="#ffffff"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="9dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/restaurantAvatar"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/composition"
                android:id="@+id/restaurantProfile"
                android:textSize="20sp"
                android:fontFamily="@string/arimo_regular"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textColor="#000000"
                android:clickable="true"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:id="@+id/restaurantName"
                android:textSize="20sp"
                android:fontFamily="@string/geometric_706_black"
                android:layout_marginTop="2dp"
                android:textColor="#000000"
                android:text="Name"
                android:layout_gravity="center_horizontal|top"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/costMeal"
                android:fontFamily="@string/geometric_706_black"
                android:textSize="21dp"
                android:layout_marginRight="2dp"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:text="300$"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:id="@+id/costMealText"
                android:fontFamily="@string/arimo_regular"
                android:textSize="15sp"
                android:background="#fda94d"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:id="@+id/costText"
                android:layout_marginTop="2dp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="400"
                android:layout_weight="1"
                android:gravity="right|top"
                android:padding="2dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="1dp"
                android:gravity="right"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:textColor="#000000"
                    android:textSize="13sp"
                    android:text="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count"
                    android:id="@+id/textView12"
                    android:textColor="#000000"
                    android:textSize="13sp"
                    android:gravity="right" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
