<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:paddingTop="15dp"
    android:touchscreenBlocksFocus="true">
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:id="@+id/lineView4" android:background="@drawable/line"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:paddingLeft="15dp"
        android:layout_marginTop="15dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:paddingTop="5dp">
            <ImageView
                    android:layout_width="14dp"
                    android:layout_height="10dp"
                    android:id="@+id/envelope_id" android:src="@drawable/envelope" android:layout_marginBottom="5dp"
                android:layout_weight="1" />
            <ImageView
                    android:layout_width="12dp"
                    android:layout_height="16dp"
                    android:id="@+id/phone_id" android:src="@drawable/phone"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
            android:layout_weight="12">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/email"
                    android:id="@+id/email_id" android:layout_marginBottom="4dp"
                android:fontFamily="@string/geometric_706_black"
                android:textSize="12sp"
                android:textIsSelectable="true" />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:text="@string/phone_number"
                    android:id="@+id/number_id"
                android:fontFamily="@string/geometric_706_black"
                android:textSize="12sp"
                android:textIsSelectable="true"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:paddingLeft="15dp" android:paddingBottom="15dp">
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/facebook_id" android:src="@drawable/facebook" android:layout_marginRight="15dp"
            android:layout_weight="1" />
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:id="@+id/instagram_id" android:src="@drawable/cam"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>