<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:foregroundGravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:id="@+id/delivery_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="С ДОСТАВКОЙ"
                android:id="@+id/textView13"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="14sp"
                android:layout_gravity="center_vertical" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/delivery"
                android:checked="true"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:clickable="false" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:id="@+id/non_delivery_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="САМОВЫВОЗ"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="14sp"
                android:layout_gravity="center_vertical" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/non_delivery"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:checked="false"
                android:clickable="false" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:id="@+id/textView15"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical|left" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/yourName"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Dmitriy" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_city"
            android:id="@+id/textView16"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical|left" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/yourCity"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Talin" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:id="@+id/street">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:id="@+id/textView17"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical|left" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/yourStreet"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Beketova" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:id="@+id/num_house">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_house"
            android:id="@+id/textView18"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical|left" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/yourHouseNum"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="11" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:id="@+id/num_flat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_flat"
            android:id="@+id/textView19"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical|left" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/yourFlatNum"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="22" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_email"
            android:id="@+id/textView21"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical|left" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/yourEmail"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="ds@mail.ru" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_phone"
            android:id="@+id/textView22"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical|left" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/yourPhone"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="777" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="-20dp">

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:padding="-20dp"/>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker"
            android:layout_weight="1"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:padding="-20dp"/>
    </LinearLayout>


</LinearLayout>